--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@zeit/next-typescript": "^1.1.1",
     "babel-loader": "^8.0.4",
     "babel-plugin-module-resolver": "^3.1.1",
+    "compromise": "^11.12.3",
     "css-loader": "^1.0.1",
     "dayjs": "^1.7.7",
     "evergreen-ui": "^4.3.0",
