--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@babel/preset-env": "^7.1.0",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
+    "animejs": "^2.2.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-module-resolver": "^3.1.1",
+    "chrono-node": "^1.3.5",
     "compromise": "^11.12.3",
     "css-loader": "^1.0.1",
+    "d3-timer": "^1.0.9",
     "dayjs": "^1.7.7",
     "evergreen-ui": "^4.3.0",
     "isomorphic-unfetch": "^3.0.0",
@@ -36,6 +39,7 @@
     "url-loader": "^1.1.2"
   },
   "devDependencies": {
+    "@types/animejs": "^2.0.1",
     "@types/next": "^7.0.3",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
