--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "^7.0.2",
     "next-compose-plugins": "^2.1.1",
     "next-offline": "^3.0.4",
+    "plur": "^3.0.1",
     "polished": "^2.3.0",
     "raw-loader": "^0.5.1",
     "react": "^16.6.0",
